# ontoskills

./: .env.example  .gitignore  CHANGELOG.md  COMPATIBILITY.md  LICENSE  PHILOSOPHY.md  README.md  README_zh.md  SPIEGAZIONE_PROGETTO.md  astro.config.mjs  exceptions.py  loader.py  package-lock.json  package.json  pyproject.toml  sparql.py  transformer.py
.github/workflows/: publish-ontoskill.yml  publish-ontoskills.yml  release-core.yml  release-mcp.yml
benchmark/: .gitignore  CLAUDE.md  README.md  compare.py  config.py  content_coverage.py  merge_results.py  requirements.txt  run.py  smoketest.py
benchmark/agents/: __init__.py  base.py  claudecode.py  ontoskills.py  traditional.py  utils.py
benchmark/mcp_client/: __init__.py  client.py
benchmark/ontomcp-bench/: Cargo.toml
benchmark/ontomcp-bench/src/: main.rs
benchmark/reporting/: __init__.py  chart_data.py  comparison.py  metrics.py
benchmark/skills/: generate.py
benchmark/tests/: test_benchmark.py
benchmark/traditional-bench/: bench.py
benchmark/wrappers/: __init__.py  gaia.py  perpackage.py  skillsbench.py  swebench.py  tau2bench.py
cli/lib/: install.js  registry.js
compiler/: __init__.py  cli.py  config.py  extractor.py  loader.py  pyproject.toml  schemas.py  security.py  sparql.py  storage.py  transformer.py  validator.py
compiler/tests/: conftest.py  test_cli.py  test_config.py  test_exceptions.py  test_extractor.py  test_integration.py  test_loader.py  test_schemas.py  test_security.py  test_sparql.py  test_transformer.py  test_validation.py
core/: CHANGELOG.md  README.md  __init__.py  cli.py  config.py  core.ttl  core_ontology.py  differ.py  drift_report.py  env.py  exceptions.py  explainer.py  extractor.py  graph_export.py  linter.py  prompts.py  pyproject.toml  registry.py  schemas.py  security.py  serialization.py  snapshot.py  storage.py  transformer.py  validator.py
core/.ontoskills/snapshots/: skills_20260318_211450_835a67a9.ttl  skills_20260318_211450_c7ab90bc.ttl  skills_20260319_171825_5e2169e4.ttl  skills_20260319_171825_cfb5c3dc.ttl
core/embeddings/: __init__.py  exporter.py
core/specs/: ontoskills.shacl.ttl
core/src/: config.py  content_parser.py  core_ontology.py  differ.py  extractor.py  linter.py  loader.py  prompts.py  schemas.py  serialization.py  storage.py  transformer.py  validator.py
core/src/cli/: __main__.py  compile.py  dev.py  install.py
core/src/registry/: __init__.py  install.py  models.py  resolve.py  state.py
core/tests/: conftest.py  test_cli.py  test_config.py  test_content_parser.py  test_core_ontology.py  test_differ.py  test_docgraph_coverage.py  test_embeddings.py  test_exceptions.py  test_explainer.py  test_extractor.py  test_graph_export.py  test_integration.py  test_linter.py  test_loader.py  test_new_properties.py  test_registry.py  test_resolve.py  test_schemas.py  test_security.py  test_serialization.py  test_sparql.py  test_storage.py  test_subskill_integration.py  test_transformer.py  test_validation.py
docs/: PR-SUMMARY-OWL-Semantic-Fixes.md  authoring.md  cli.md  compiler.md  getting-started.md  marketplace.md  mcp-claude-code.md  mcp-codex.md  mcp.md  overview.md  registry.md  roadmap.md  semantic-discovery.md  troubleshooting.md
docs/superpowers/plans/: 2025-03-16-monorepo-restructure.md  2025-03-16-shacl-validation-gatekeeper.md  2026-03-16-skill-ontology-etl.md  2026-03-26-ontology-owl-semantics-fix-plan.md  2026-04-04-registry-output-structure.md  2026-04-29-skillsbench-mcp-improvements.md
docs/superpowers/specs/: 2025-03-16-shacl-validation-gatekeeper-design.md  2026-03-15-skill-ontology-etl-design.md  2026-03-17-ontoclaw-site-design.md  2026-03-26-ontology-owl-semantics-fix-design.md  2026-04-04-registry-output-structure-design.md  2026-04-29-skillsbench-mcp-improvements-design.md
docs/zh/: architecture.md  authoring.md  compiler.md  getting-started.md  marketplace.md  mcp-claude-code.md  mcp.md  registry.md  roadmap.md
docs_zh/: cli.md  knowledge-extraction.md  mcp-codex.md  overview.md  semantic-discovery.md  troubleshooting.md
mcp/: CHANGELOG.md  CLAUDE_CODE_GUIDE.md  CODEX_GUIDE.md  Cargo.toml  README.md  README_zh.md
mcp/src/: bm25_engine.rs  catalog.rs  compact.rs  embeddings.rs  main.rs  schema.rs
mcp/tests/: e2e_search.sh  test_embeddings.rs
ontoskills/: index.ttl  ontoclaw-core.ttl  ontoskills-core.ttl
ontoskills/office/: ontoskill.ttl
ontostore/: README.md
public/: robots.txt
registry/: README.md  index.json
site/: Dockerfile  README.md  astro.config.mjs  nginx.conf  package-lock.json  package.json
site/public/: robots.txt
site/public/ontology/: core.ttl
site/src/: content.config.ts
site/src/components/: Head.astro
site/src/data/: registry.ts
site/src/docs/: architecture.md  authoring.md  claude-code-mcp.md  cli.md  codex-mcp.md  compiler.md  getting-started.md  knowledge-extraction.md  mcp-bootstrap.md  mcp.md  ontostore-ui.md  ontostore.md  overview.md  roadmap.md  semantic-discovery.md  store.md  troubleshooting.md
site/src/i18n/: en.ts  zh.ts
site/src/layouts/: LandingLayout.astro
skills/office/: SKILL.md
specs/: ontoclaw.shacl.ttl  ontoskills.shacl.ttl  registry-package-spec.md
src/i18n/: translations.ts
src/layouts/: LandingLayout.astro
src/pages/: 404.astro  explore.astro  index.astro  ontostore.astro
src/styles/: global.css  starlight-theme.css  starlight.css
tests/: ontoskills-mcp-bootstrap.test.js  test_exceptions.py  test_integration.py  test_loader.py  test_sparql.py  test_transformer.py
(+187 files in other folders)
