[package]
name = "ontomcp"
version = "0.9.1"
edition = "2024"
description = "Local MCP server for OntoSkills ontologies"
license = "MIT"

[dependencies]
oxigraph = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
# Embeddings support
ndarray = "0.17"
anyhow = "1.0"
# ONNX inference for semantic embeddings
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = "0.19"

[dev-dependencies]
tempfile = "3"
