[package]
name = "ontomcp"
version = "1.0.0"
edition = "2024"
description = "Local MCP server for OntoSkills ontologies"
license = "MIT"

[features]
default = []
embeddings = ["ort", "tokenizers", "ndarray"]

[dependencies]
oxigraph = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1.0"
# BM25 keyword search (default engine)
bm25 = "1"
# Optional: ONNX inference for semantic embeddings
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"], optional = true }
tokenizers = { version = "0.19", optional = true }
ndarray = { version = "0.17", optional = true }

[dev-dependencies]
tempfile = "3"
